# fastapitest

fast-api-demo/: pyproject.toml
fast-api-demo/fast_api_demo/: main.py
