[tool.poetry]
name = "fast-api-demo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "fast_api_demo"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.91.0"
sqlalchemy = "^2.0.3"
pytest = "^7.2.1"
uvicorn = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "fast_api_demo.main:start"
